objects/TestACObj1__c.object
<CustomObject>
    <fields>
        <fullName>TestFeidl3__c</fullName>
        <label>TestFeidl3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestField1__c</fullName>
        <description>Add comment for TestField1</description>
        <label>TestField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Testfied2__c</fullName>
        <description>Add Comment  for Testfied2</description>
        <label>Testfied2</label>
        <type>Phone</type>
    </fields>
</CustomObject>